--- a/app/views/layouts/main_view.html.erb
+++ b/app/views/layouts/main_view.html.erb
@@ -15,10 +15,11 @@
 
   <div class="row">
     <div class="col-md-7">
-      fkdl
+      <%= yield %>
     </div>
     <div class="col-md-5">
-      sdjklfjklsdj
+      <%= render partial: 'layouts/right_trail' if @right_trail_content %>
+
     </div>
   </div>
 
