--- a/app/views/layouts/main_view.html.erb
+++ b/app/views/layouts/main_view.html.erb
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html>
 <head>
   <title>Emchik.by</title>
   <meta charset="utf-8">
+  <%= stylesheet_link_tag "application", media: "all" %>
+  <%= javascript_include_tag "application"%>
+  <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="format-detection" content="telephone=no"/>
   <meta name="description" content="Your description">
