--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,23 +1,31 @@
 <script src="/ckeditor/ckeditor.js"></script>
 <script src="/ckeditor/adapters/jquery.js"></script>
 
-<fieldset>
-  <legend>Изменить</legend>
+
+
+<h3 class="ident-top-2">Edit post</h3>
 
   <div class="form-inputs">
 
-    <%= f.input :title, label: 'Заголовок :', :as => :text, input_html: {rows:2,  style:'width:90%'} %>
-    <%= f.input :author, label: 'Автор :', :as => :text, input_html: {rows:2,  style:'width:90%'} %>
-    <%= f.input :brief_text, label: 'Кратко :', input_html: {rows:4,  style:'width:90%'} %>
-    <%= f.input :text, label: 'Текст :' %>
-    <%= f.input :visible, label: 'Виден?:'%>
+    <h2>
+      <%= f.input :title, label: 'title :', :as => :text, input_html: {rows: 2, style: 'width: 100%'} %>
+      <%= f.input :author, label: 'author :', :as => :text, input_html: {rows: 2, style: 'width: 100%'} %>
+      <%= f.input :brief_text, label: 'brief_text :', input_html: {class: 'ckeditor'} %>
+      <%= f.input :text, label: 'text :', input_html: {class: 'ckeditor'} %>
+      <%= f.input :visible, label: 'visible?' %>
+    </h2>
 
   </div>
 
-</fieldset>
 
 <script>
     $(document).ready(function () {
         $('#post_text').ckeditor();
     });
 </script>
+
+
+
+
+
+
