--- a/app/views/layouts/main_view.html.erb
+++ b/app/views/layouts/main_view.html.erb
@@ -71,7 +71,6 @@
     <div class="container_12">
       <article class="grid_8 ">
         <h2>Blog</h2>
-
         <div class="orange-top-drop"></div>
       </article>
     </div>
@@ -95,9 +94,9 @@
       </div>
     </div>
   </section>
-
-  <%= render partial: 'layouts/right_trail' if @right_trail_content %>
 </div>
+
+<%= render partial: 'layouts/footer' %>
 
 </body>
 </html>
