--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,20 +1,29 @@
+<% if can? :creat, @post %>
+    <hr>
+    <%= link_to 'New post', new_post_path, class: 'button1' %>
+<% end %>
+
 
 <% @posts.each do |post| %>
 
     <article class="post-holder">
       <div>
 
+        <div class="date"><span class="day"> <%= Russian.strftime(post.created_at, '%d') %></span>
+          <span class="month"> <%= Russian.strftime(post.created_at, '%b') %></span></div>
+
         <h2 class="entry-title fleft"><%= link_to(post.title, post_path(post)) %></h2>
 
         <div class="post-meta">
-          <div class="fleft"><i class="icon-user"></i> <a href="#">owltemplates / </a>
-            <a> <%= post.created_at.to_s(:ru_datetime) %> </a></div>
+          <div class="fleft"><i class="icon-user"></i> <a href="#">автор: <%= post.author %> </a> /
+            <a><%= Russian.strftime(post.created_at, '%A') %>,
+              <%= Russian.strftime(post.created_at, '%d %B %Y') %> </a></div>
         </div>
         <!--.post-meta-->
       </div>
       <figure class="ident-bot-2"><a class="fixed-img" href="#"><img src="images/blog/post1.jpg"></a></figure>
       <p class="ident-bot-2"><%= sanitize post.brief_text %></p>
-      <a class="button1" href="blog-single.html">Continue Reading</a>
+      <%= link_to('Читать далее', post_path(post), class: 'button1') %>
 
       <% if can? :edit, post %>
           <%= link_to('Edit', edit_post_path(post), class: 'button1') %>
@@ -29,5 +38,8 @@
 
 
 <% if can? :creat, @post %>
-    <%= link_to 'New post', new_post_path %>
+    <hr>
+    <%= link_to 'New post', new_post_path, class: 'button1' %>
 <% end %>
+
+
