--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,12 +6,14 @@
 @import"superfish.css";
 @import"forms.css";
 @import url(http://fonts.googleapis.com/css?family=Fjalla+One);
+@import url(http://fonts.googleapis.com/css?family=Ubuntu+Condensed&subset=latin,cyrillic);
+
 
 /* ===================================== */
 /* Global Structure*/
 /* ===================================== */
 
-body { background: url(../images/patterns/light/pattern1.png) repeat center 0 #ccc; border-top: 6px solid #000000; font:13px/21px Arial, Helvetica, sans-serif; color:#909090; position:relative; min-width:980px; }
+body { background: url(../images/patterns/light/pattern1.png) repeat center 0 #ccc; border-top: 6px solid #000000; font:18px/7px 'Ubuntu Condensed', sans-serif; color:#838282; position:relative; min-width:980px; }
  a[href^="tel:"] {
 color: inherit;
 text-decoration:none;
@@ -42,7 +44,7 @@ a:hover { }
 /* Header styles */
 /* ===================================== */
 
-h1, h2, h3, h4, h5, h6 { line-height: 36px; margin-top: 50px; color:#3f3e3e; margin-bottom: 18px; font-family: 'Fjalla One', sans-serif; font-weight:normal; }
+h1, h2, h3, h4, h5, h6 { line-height: 36px; margin-top: 50px; color:#3f3e3e; margin-bottom: 18px; font-family: 'Ubuntu Condensed', sans-serif; font-weight:normal; }
 
 h1 { font-size:38px; }
 
@@ -86,7 +88,7 @@ h2 span { color: #D73604; }
 
 .extra-wrap { display: block; overflow: hidden; }
 
-.link-name { color: #D73604; display: block; font: 15px/21px 'Fjalla One', sans-serif; margin-bottom: 4px; text-transform: uppercase; }
+.link-name { color: #D73604; display: block; font: 15px/21px 'Ubuntu Condensed', sans-serif; margin-bottom: 4px; text-transform: uppercase; }
 
 /* ===================================== */
 /*  txt align, margin, padding */
@@ -208,7 +210,7 @@ header h1 { padding: 18px 0 0 50px; margin:0; float:left; font-size:0; line-heig
 
 .header-title h2 { display: inline-block; line-height: 44px; margin: 0; font-size: 23px; text-transform: uppercase; }
 
-.header-title p { font-family: 'Fjalla One', sans-serif; font-size: 15px; margin-bottom: 0; }
+.header-title p { font-family: 'Ubuntu Condensed', sans-serif; font-size: 15px; margin-bottom: 0; }
 
 .header-title h2 span { color: #D73604; }
 
@@ -228,7 +230,7 @@ ul.list-link>li { border-top: 1px solid #e9e9e9; font-size: 18px; line-height: 2
 
 ul.list-link>li:first-child { border: none; }
 
-ul.list-link>li a { display: block; font-size: 16px; font-family: 'Fjalla One', sans-serif; line-height: 24px; padding: 14px 0 12px; }
+ul.list-link>li a { display: block; font-size: 16px; font-family: 'Ubuntu Condensed', sans-serif; line-height: 24px; padding: 14px 0 12px; }
 
 ul.list-link>li a:hover { color: #D53701; text-decoration: none; }
 
@@ -254,13 +256,13 @@ ul.list-link>li a:hover { color: #D53701; text-decoration: none; }
 
 .faq_list { width: 100%; }
 
-.faq_list dt { color:#D73604; border-bottom: 1px solid #EEEEEE; position:relative; padding: 0 0 15px 26px; font-family: 'Fjalla One', sans-serif; font-size:18px; font-weight:normal; margin: 0 0 20px; background:none; }
+.faq_list dt { color:#D73604; border-bottom: 1px solid #EEEEEE; position:relative; padding: 0 0 15px 26px; font-family: 'Ubuntu Condensed', sans-serif; font-size:18px; font-weight:normal; margin: 0 0 20px; background:none; }
 
 .faq_list span.marker { display:block; position:absolute; left:0; top:0; font-size:18px; color:#D73604; font-weight:bold; }
 
 .faq_list dd { padding:0 0 0 26px; position:relative; margin:10px 0; }
 
-.faq_list dd .marker { top:3px; font-family: 'Fjalla One', sans-serif; }
+.faq_list dd .marker { top:3px; font-family: 'Ubuntu Condensed', sans-serif; }
 
 /* ===================================== */
 /* Content*/
@@ -307,7 +309,7 @@ aside { background: url("../images/aside.jpg") repeat-x scroll 0 0 #1f1f1f; padd
 
 .port-title p { color: #FFFFFF; margin: 0 !important; padding: 0 !important; }
 
-.button1 { display:inline-block; padding:13px 19px; color:#fff; position:relative; font-family: 'Fjalla One', sans-serif; background: none repeat scroll 0 0 #333333; text-transform:uppercase; font-size:14px; margin-bottom:3px; -webkit-border-radius:3px 3px 3px 3px; -moz-border-radius:3px 3px 3px 3px; border-radius:3px 3px 3px 3px; -webkit-box-shadow: 0 -3px 0 0 rgba(0, 0, 0, 0.6) inset; -moz-box-shadow: 0 -3px 0 0 rgba(0, 0, 0, 0.6) inset; box-shadow: 0 -3px 0 0 rgba(0, 0, 0, 0.6) inset; line-height:17px; }
+.button1 { display:inline-block; padding:13px 19px; color:#fff; position:relative; font-family: 'Ubuntu Condensed', sans-serif; background: none repeat scroll 0 0 #333333; text-transform:uppercase; font-size:14px; margin-bottom:3px; -webkit-border-radius:3px 3px 3px 3px; -moz-border-radius:3px 3px 3px 3px; border-radius:3px 3px 3px 3px; -webkit-box-shadow: 0 -3px 0 0 rgba(0, 0, 0, 0.6) inset; -moz-box-shadow: 0 -3px 0 0 rgba(0, 0, 0, 0.6) inset; box-shadow: 0 -3px 0 0 rgba(0, 0, 0, 0.6) inset; line-height:17px; }
 
 .button1:hover { text-decoration:none; background:#d73604; }
 
@@ -325,13 +327,13 @@ aside { background: url("../images/aside.jpg") repeat-x scroll 0 0 #1f1f1f; padd
 
 .link2:hover { color:#d53701; text-decoration:none; }
 
-.text2 { color:#3f3e3e; display:block; font-family: 'Fjalla One', sans-serif; margin-bottom: 3px; }
+.text2 { color:#3f3e3e; display:block; font-family: 'Ubuntu Condensed', sans-serif; margin-bottom: 3px; }
 
 .page2-img2 { padding:23px 0 24px; }
 
 .page2-box2 { float:left; width:183px; margin-right:20px; }
 
-.inner1 { float:left; margin-right:16px; color:#3f3e3e; font-family: 'Fjalla One', sans-serif; font-size:36px; line-height:44px; }
+.inner1 { float:left; margin-right:16px; color:#3f3e3e; font-family: 'Ubuntu Condensed', sans-serif; font-size:36px; line-height:44px; }
 
 .page2-box3 { overflow:hidden; }
 
@@ -399,11 +401,11 @@ aside { background: url("../images/aside.jpg") repeat-x scroll 0 0 #1f1f1f; padd
 
 .post-meta i { font-size: 17px; color:#000; padding: 0 5px 0 10px; }
 
-.post-meta a { font-family: 'Fjalla One', sans-serif; text-decoration:none; }
+.post-meta a { font-family: 'Ubuntu Condensed', sans-serif; text-decoration:none; }
 
 .post-meta a:hover { color: #D73604; }
 
-.post-holder .date { position: relative; left: 0; top: -7px; background: #222; border: 1px solid #3b2e29; font-family: 'Fjalla One', sans-serif; float: left; width: 49px; height: 50px; margin-top: 50px; margin-right: 10px; margin-bottom: 10px; color: #fff; text-align: center; }
+.post-holder .date { position: relative; left: 0; top: -7px; background: #222; border: 1px solid #3b2e29; font-family: 'Ubuntu Condensed', sans-serif; float: left; width: 49px; height: 50px; margin-top: 50px; margin-right: 10px; margin-bottom: 10px; color: #fff; text-align: center; }
 
 .post-holder .date span { display: block; text-transform: lowercase; }
 
@@ -411,7 +413,7 @@ aside { background: url("../images/aside.jpg") repeat-x scroll 0 0 #1f1f1f; padd
 
 .post-holder .date .month { background: none repeat scroll 0 0 #D73604; font-size: 15px; margin-top: 0; text-transform: uppercase; }
 
-.comments-link { display: block; color:#fff !important; width: 32px; height: 35px; margin-top: 50px; font-family: 'Fjalla One', sans-serif; font-size: 12px; color: #fff; text-align: center; line-height: 28px; text-decoration: none; position: relative; }
+.comments-link { display: block; color:#fff !important; width: 32px; height: 35px; margin-top: 50px; font-family: 'Ubuntu Condensed', sans-serif; font-size: 12px; color: #fff; text-align: center; line-height: 28px; text-decoration: none; position: relative; }
 
 .comments-link:hover { color:#D73604 !important; }
 
@@ -500,7 +502,7 @@ footer { background: url("../images/aside.jpg") repeat-x scroll 0 0 #1F1F1F; mar
 
 .tags, .archive, .tweet { float: left; }
 
-.tags a:link, .tags a:visited { background: none repeat scroll 0 0 #D73604; color: #fff; font-family: 'Fjalla One', sans-serif; -webkit-border-radius: 4px 4px 4px 4px; -moz-border-radius: 4px 4px 4px 4px; border-radius: 4px 4px 4px 4px; box-shadow: 0 1px 0 rgba(0, 0, 0, 0.3); -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.3); -moz-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.3); display: inline-block; margin-bottom: 3px; padding: 2px 6px; text-shadow: 0 1px 1px #000; behavior: url(css/PIE.htc); }
+.tags a:link, .tags a:visited { background: none repeat scroll 0 0 #D73604; color: #fff; font-family: 'Ubuntu Condensed', sans-serif; -webkit-border-radius: 4px 4px 4px 4px; -moz-border-radius: 4px 4px 4px 4px; border-radius: 4px 4px 4px 4px; box-shadow: 0 1px 0 rgba(0, 0, 0, 0.3); -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.3); -moz-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.3); display: inline-block; margin-bottom: 3px; padding: 2px 6px; text-shadow: 0 1px 1px #000; behavior: url(css/PIE.htc); }
 
 .tags a:hover { background: url("../images/patterns/hash.png") repeat scroll left top #AF242C; color: #fff; box-shadow: 0 0 1px rgba(0, 0, 0, 0.0); -webkit-box-shadow:  0 0 1px rgba(0, 0, 0, 0.0); -moz-box-shadow:  0 0 1px rgba(0, 0, 0, 0.0); }
 
