20140208 add category and archive

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,9 +10,9 @@
             </li>
             <li><span></span><a href= '<% posts_path %>'><i class="icon-star-empty"></i> labs</a>
             </li>
-            <li><span></span><a href= '<% posts_path %>'><i class="icon-th"></i> archive</a>
+            <li><span></span><a href= '<% archive_path %>'><i class="icon-th"></i> archive</a>
             </li>
-            <li><span></span><a href="about.html"><i class="icon-user"></i> About</a></li>
+            <li><span></span><a href="<%  archive_path %>"><i class="icon-user"></i> About</a></li>
             <% if user_signed_in? %>
                 <li>   <span></span>
                   <form method = "post">
