20140209 upload images ckeditor

--- a/app/views/labs/index.html.erb
+++ b/app/views/labs/index.html.erb
@@ -4,7 +4,7 @@
 <% end %>
 
 
-<% @posts.each do |post| %>
+<% @labs.each do |post| %>
 
     <article class="post-holder">
       <div>
@@ -44,7 +44,7 @@
     <h2>Черновики</h2>
 
 
-    <% @post_draft.each do |post| %>
+    <% @labs_draft.each do |post| %>
 
         <article class="post-holder">
           <div>
