--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,11 +6,11 @@
       <div class="inner-block">
         <nav>
           <ul class="sf-menu responsive-menu">
-            <li <%= 'class = "current"'.html_safe if @current_tab ==:blog %>><span></span><a href="http://localhost:3000"><i class="icon-comment-alt"></i> blog</a>
+            <li <%= 'class = "current"'.html_safe if @current_tab ==:blog %>><span></span><a href='<%= "#{request.protocol}#{request.host_with_port}" %>'><i class="icon-comment-alt"></i> blog</a>
             </li>
-            <li <%= 'class = "current"'.html_safe if @current_tab == :labs %>><span></span><a href= 'http://localhost:3000/labs'><i class="icon-star-empty"></i> labs</a>
+            <li <%= 'class = "current"'.html_safe if @current_tab == :labs %>><span></span><a href= 'labs'><i class="icon-star-empty"></i> labs</a>
             </li>
-            <li><span></span><a href= 'http://localhost:3000/archive'><i class="icon-th"></i> archive</a>
+            <li <%= 'class = "current"'.html_safe if @current_tab == :archive %>><span></span><a href= 'archive'><i class="icon-th"></i> archive</a>
             </li>
             <li><span></span><a href="<%  archive_path %>"><i class="icon-user"></i> About</a></li>
             <% if user_signed_in? %>
@@ -30,18 +30,3 @@
   </header>
   <div class="header-title-blank main-wrapper-shadow"></div>
 </div>
-
-<script>
-  function change_current()
-  {
-      //alert('2');
-      //$('header li').removeClass('current');
-      $(this).addClass('current');
-  }
-
-  $(function(){
-
-      $('header li').click(change_current);
-  })
-
-</script>
