--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,12 +10,30 @@
     </div>
     <!--.post-meta-->
   </div>
-  <figure class="ident-bot-2"><a class="fixed-img" href="#"><img src="/images/blog/post1.jpg"></a></figure>
-  <p class="ident-bot-2"><%= sanitize @post.brief_text %></p>
-  <p class="ident-bot-2"><%= sanitize @post.text %></p>
+  <p class="ident-bot-2"><%= raw @post.brief_text %></p>
+  <p class="ident-bot-2"><%= raw @post.text %></p>
 
 </article>
-<div class="clear"></div>
 <hr>
+
+
+<div class = 'well' style="background-color: #000000"> <!-- temp; ars; 10/02/2014 -->
+  <div id="disqus_thread"></div>
+  <script type="text/javascript">
+      /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+      var disqus_shortname = 'earblog'; // required: replace example with your forum shortname
+
+      /* * * DON'T EDIT BELOW THIS LINE * * */
+      (function() {
+          var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+          dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+          (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+      })();
+  </script>
+  <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+  <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+</div>
+
+
 
 
