--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,7 +13,7 @@
 /* Global Structure*/
 /* ===================================== */
 
-body { background: url(../images/patterns/light/pattern1.png) repeat center 0 #ccc; border-top: 6px solid #000000; font:18px/7px 'Ubuntu Condensed', sans-serif; color:#838282; position:relative; min-width:980px; }
+body { background: url(../images/patterns/light/pattern1.png) repeat center 0 #ccc; border-top: 6px solid #000000; font:18px 'Ubuntu Condensed', sans-serif; color:#838282; position:relative; min-width:980px; }
  a[href^="tel:"] {
 color: inherit;
 text-decoration:none;
@@ -397,7 +397,7 @@ aside { background: url("../images/aside.jpg") repeat-x scroll 0 0 #1f1f1f; padd
 
 .post-holder .entry-title a:hover { color: #D73604; }
 
-.post-meta { border-top:1px solid #E3E3E3; border-bottom:1px solid #E3E3E3; display:inline-block; padding: 10px 0; width:100%; overflow:hidden; margin-bottom:20px; }
+.post-meta { border-top:1px solid #E3E3E3; border-bottom:1px solid #E3E3E3; display:inline-block; padding: 10px 0; width:100%; overflow:hidden; margin-bottom:-6px; }
 
 .post-meta i { font-size: 17px; color:#000; padding: 0 5px 0 10px; }
 
